fixed bug where only image would show up in item template added elements to test the ensureVisible Method and scrollPosition property

--- a/css/default.css
+++ b/css/default.css
@@ -7,7 +7,7 @@
     overflow: hidden;
 }
 
-.listIconTextTemplate listIconTextItem-Image
+.listIconTextTemplate .listIconTextItem-Image
 {
     width: 60px;
     height: 60px;
@@ -20,6 +20,7 @@
 .listIconTextItem .listIconTextItem-Detail
 {
     margin: 5px;
+    float: left;
 }     
 
 .listLayoutHeaderTemplate, .listLayoutHeaderTemplate {
